package TOPSECRET.domain.directsale;

import TOPSECRET.ddd.AggregateRoot;
import TOPSECRET.domain.author.Author;
import TOPSECRET.domain.Item;
import TOPSECRET.domain.publication.Publication;
import TOPSECRET.domain.publishingcompany.PublishingCompany;
import TOPSECRET.domain.valueobject.AuthorId;
import TOPSECRET.domain.valueobject.DirectSaleId;
import TOPSECRET.domain.valueobject.GenreId;
import TOPSECRET.domain.valueobject.Price;

import java.time.Period;
import java.util.List;
import java.util.UUID;

/**
 * Represents a direct sale of an {@link Item} with a specified {@link Price} and optional time limit.
 * <p>
 * Ensures that both the item and price are provided and that the time limit, if specified, is not negative.
 * Provides methods to retrieve the item, price, time limit, and to check if the sale is by a specific {@link Author}.
 * </p>
 */

public class DirectSale implements AggregateRoot<DirectSaleId> {

    private final List<Item> _items;
    private final Price _price;
    private final Period _timeLimit; // optional
    private DirectSaleId _directSaleId;

    DirectSale(List<Item> items, Price price, Period timeLimit) {

        requiresItemAndPrice(items, price);
        timeLimitMustBeValid(timeLimit);

        _items = items;
        _price = price;
        _timeLimit = timeLimit;// may be null = unlimited duration
        _directSaleId = new DirectSaleId();
    }

    public List<Item> getItems() { return _items; }
    public Price getPrice() { return _price; }
    public Period getTimeLimit() { return _timeLimit; }

    private static void requiresItemAndPrice(List<Item> items, Price price) {
        if (items == null) {
            throw new IllegalArgumentException("Item is required for a direct sale");
        }
        if (price == null) {
            throw new IllegalArgumentException("Price is required for a direct sale");
        }
    }
    private static void timeLimitMustBeValid(Period timeLimit) {
        if (timeLimit != null && timeLimit.isNegative()) {
            throw new IllegalArgumentException("Time limit cannot be negative");
        }
    }

    public boolean isByAuthor (AuthorId authorId) {
        for(Item item : _items) {
            if(item.isByAuthor(authorId)) {
                return true;
            }
        }
        return false;

    }

    public boolean isByPublication (Publication publication) {
        for(Item item : _items) {
            if(item.isByPublication(publication)) {
                return true;
            }
        }
        return false;
    }

    public boolean isByPublishingCompany(PublishingCompany publisher) {
        for(Item item : _items) {
            if(item.isByPublishingCompany(publisher)) {
                return true;
            }
        }
        return false;
    }

    public boolean isByGenre(GenreId genreId) {
        for(Item item : _items) {
            if(item.isByGenre(genreId)) {
                return true;
            }
        }
        return false;
    }

    @Override
    public DirectSaleId identity() {
        return null;
    }

    @Override
    public boolean sameAs(Object object) {
        return false;
    }
}
