@startuml
title "US023 - As a Buyer, I want to get the list of items on \ndirect sale of a given publication - CD"

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

class GetDirectSaleItemsByPublicationUI {

}

class GetDirectSaleItemsByPublicationsController {
    + getDirectSaleItemsByPublication(publication : Publication) : List<Item>
}

class MemoDirectSaleRepo {

}

interface IDirectSaleRepo {
}

class DirectSale {
+ isByPublication(publication : Publication) : boolean
+ getItem() : Item
}

class Item {
+ isByPublication(publication : Publication) : boolean
}

class Publication {
+ equals(object : Object) : boolean
}

GetDirectSaleItemsByPublicationUI "1" ..> "1" GetDirectSaleItemsByPublicationsController : invoke
GetDirectSaleItemsByPublicationsController "1" ..> "1" IDirectSaleRepo : uses
IDirectSaleRepo "1" <|.. "1" MemoDirectSaleRepo

MemoDirectSaleRepo "1" --> "*" DirectSale : manages
DirectSale "1" --> "1" Item : contains
Item "1" --> "1" Publication : contains

@enduml